detail fragment completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Crypto">
         <activity
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
